# zavrsni_rad

./: .gitignore  README.md
C++/: CMakeLists.txt  main.cpp  raspored.txt  raspored_preklapanja.txt
C++/include/: ScheduleSolver.hpp  data.hpp
C++/include/strategy/: Fitness.hpp  ParentSelection.hpp  UnitCrossing.hpp
C++/include/strategy/cross/: AlternatingCross.hpp  HalfCross.hpp  KCross.hpp  RandomCross.hpp
C++/include/strategy/fitness/: Capacity.hpp  Overlap.hpp
C++/include/strategy/parents/: KTournament.hpp  Proportion.hpp  ProportionV1.hpp  ProportionV2.hpp
C++/include/util/: DataLoader.hpp
C++/resources/: jmbags.txt  raspored_tl-uklapanja.txt  raspored_tl.txt  termini.txt  zauzetost.csv
C++/src/: ScheduleSolver.cpp  data.cpp
C++/src/strategy/cross/: AlternatingCross.cpp  HalfCross.cpp  KCross.cpp  RandomCross.cpp
C++/src/strategy/fitness/: Capacity.cpp  Overlap.cpp
C++/src/strategy/parents/: KTournament.cpp  Proportion.cpp  ProportionV1.cpp  ProportionV2.cpp
C++/src/util/: DataLoader.cpp
Java/: Main.java
dokumentacija/: literatura.bib  zavrsni.aux  zavrsni.bbl  zavrsni.blg  zavrsni.lof  zavrsni.tex  zavrsni.toc
